IDEADEV-11917